--- a/notebooks/learn.ipynb
+++ b/notebooks/learn.ipynb
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {
     "vscode": {
      "languageId": "rust"
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
     "vscode": {
      "languageId": "rust"
@@ -384,7 +384,231 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Traits"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "struct Dog {\n",
+    "    name: String,\n",
+    "    age: i8,\n",
+    "}\n",
+    "struct Cat {\n",
+    "    lives: i8,\n",
+    "}\n",
+    "\n",
+    "trait Pet {\n",
+    "    fn talk(&self) -> String;\n",
+    "\n",
+    "    fn greet(&self) {\n",
+    "        println!(\"Oh you're a cutie! What's your name? {}\", self.talk());\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "impl Pet for Dog {\n",
+    "    fn talk(&self) -> String {\n",
+    "        format!(\"Woof, my name is {}!\", self.name)\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "impl Pet for Cat {\n",
+    "    fn talk(&self) -> String {\n",
+    "        String::from(\"Miau!\")\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Oh you're a cutie! What's your name? Miau!\n",
+      "Oh you're a cutie! What's your name? Woof, my name is Fido!\n"
+     ]
+    }
+   ],
+   "source": [
+    "let captain_floof = Cat { lives: 9 };\n",
+    "let fido = Dog { name: String::from(\"Fido\"), age: 5 };\n",
+    "\n",
+    "captain_floof.greet();\n",
+    "fido.greet();"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Deriving"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "#[derive(Debug, Clone, Default)]\n",
+    "struct Player {\n",
+    "    name: String,\n",
+    "    strength: u8,\n",
+    "    hit_points: u8,\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Player { name: \"\", strength: 0, hit_points: 0 } vs. Player { name: \"EldurScrollz\", strength: 0, hit_points: 0 }\n"
+     ]
+    }
+   ],
+   "source": [
+    "let p1 = Player::default(); // Default trait adds `default` constructor.\n",
+    "let mut p2 = p1.clone(); // Clone trait adds `clone` method.\n",
+    "p2.name = String::from(\"EldurScrollz\");\n",
+    "// Debug trait adds support for printing with `{:?}`.\n",
+    "println!(\"{:?} vs. {:?}\", p1, p2);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Trait Objects"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "struct Dog {\n",
+    "    name: String,\n",
+    "    age: i8,\n",
+    "}\n",
+    "struct Cat {\n",
+    "    lives: i8,\n",
+    "}\n",
+    "\n",
+    "trait Pet {\n",
+    "    fn talk(&self) -> String;\n",
+    "}\n",
+    "\n",
+    "impl Pet for Dog {\n",
+    "    fn talk(&self) -> String {\n",
+    "        format!(\"Woof, my name is {}!\", self.name)\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "impl Pet for Cat {\n",
+    "    fn talk(&self) -> String {\n",
+    "        String::from(\"Miau!\")\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, who are you? Miau!\n",
+      "Hello, who are you? Woof, my name is Fido!\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "()"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "let pets: Vec<Box<dyn Pet>> = vec![\n",
+    "    Box::new(Cat { lives: 9 }),\n",
+    "    Box::new(Dog { name: String::from(\"Fido\"), age: 5 }),\n",
+    "];\n",
+    "for pet in pets {\n",
+    "    println!(\"Hello, who are you? {}\", pet.talk());\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "32 1\n",
+      "8 8\n",
+      "16\n",
+      "16\n"
+     ]
+    }
+   ],
+   "source": [
+    "println!(\"{} {}\", std::mem::size_of::<Dog>(), std::mem::size_of::<Cat>());\n",
+    "println!(\"{} {}\", std::mem::size_of::<&Dog>(), std::mem::size_of::<&Cat>());\n",
+    "println!(\"{}\", std::mem::size_of::<&dyn Pet>());\n",
+    "println!(\"{}\", std::mem::size_of::<Box<dyn Pet>>());"
+   ]
   }
  ],
  "metadata": {
