add Exercise: Generic Logger update learn.ipynb

--- a/notebooks/learn.ipynb
+++ b/notebooks/learn.ipynb
@@ -609,6 +609,188 @@
     "println!(\"{}\", std::mem::size_of::<&dyn Pet>());\n",
     "println!(\"{}\", std::mem::size_of::<Box<dyn Pet>>());"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Generic"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Generic Functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "picked a number: 333\n",
+      "picked a tuple: (\"dog\", 1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "/// Pick `even` or `odd` depending on the value of `n`.\n",
+    "fn pick<T>(n: i32, even: T, odd: T) -> T {\n",
+    "    if n % 2 == 0 {\n",
+    "        even\n",
+    "    } else {\n",
+    "        odd\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "println!(\"picked a number: {:?}\", pick(97, 222, 333));\n",
+    "println!(\"picked a tuple: {:?}\", pick(28, (\"dog\", 1), (\"cat\", 2)));"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Generic Functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Point { x: 5, y: 10 } and Point { x: 1.0, y: 4.0 }\n",
+      "coords(u32): (5, 10)\n",
+      "coords(f64): (1.0, 0, 4.0)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#[derive(Debug)]\n",
+    "struct Point<T> {\n",
+    "    x: T,\n",
+    "    y: T,\n",
+    "}\n",
+    "\n",
+    "impl Point<u32> {\n",
+    "    fn coords(&self) -> (&u32, &u32) {\n",
+    "        (&self.x, &self.y)\n",
+    "    }\n",
+    "\n",
+    "    // fn set_x(&mut self, x: T)\n",
+    "}\n",
+    "\n",
+    "impl Point<f64> {\n",
+    "    fn coords(&self) -> (&f64, u32, &f64) {\n",
+    "        (&self.x, 0, &self.y)\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "// impl<T> Point<T> {\n",
+    "//     fn coords(&self) -> &T {\n",
+    "//         &self.x + &self.y\n",
+    "//     }\n",
+    "// }\n",
+    "\n",
+    "let integer = Point { x: 5, y: 10 };\n",
+    "let float = Point { x: 1.0, y: 4.0 };\n",
+    "println!(\"{integer:?} and {float:?}\");\n",
+    "println!(\"coords(u32): {:?}\", integer.coords());\n",
+    "println!(\"coords(f64): {:?}\", float.coords());"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "Error",
+     "evalue": "struct defined here, with 2 generic parameters: `T`, `U`",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31mError:\u001b[0m struct defined here, with 2 generic parameters: `T`, `U`"
+     ]
+    },
+    {
+     "ename": "Error",
+     "evalue": "struct defined here, with 2 generic parameters: `T`, `U`",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31mError:\u001b[0m struct defined here, with 2 generic parameters: `T`, `U`"
+     ]
+    },
+    {
+     "ename": "Error",
+     "evalue": "struct defined here, with 2 generic parameters: `T`, `U`",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31mError:\u001b[0m struct defined here, with 2 generic parameters: `T`, `U`"
+     ]
+    },
+    {
+     "ename": "Error",
+     "evalue": "struct defined here, with 2 generic parameters: `T`, `U`",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31mError:\u001b[0m struct defined here, with 2 generic parameters: `T`, `U`"
+     ]
+    },
+    {
+     "ename": "Error",
+     "evalue": "struct defined here, with 2 generic parameters: `T`, `U`",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31mError:\u001b[0m struct defined here, with 2 generic parameters: `T`, `U`"
+     ]
+    },
+    {
+     "ename": "Error",
+     "evalue": "struct defined here, with 2 generic parameters: `T`, `U`",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31mError:\u001b[0m struct defined here, with 2 generic parameters: `T`, `U`"
+     ]
+    }
+   ],
+   "source": [
+    "#[derive(Debug)]\n",
+    "struct Point<T, U> {\n",
+    "    x: T,\n",
+    "    y: U,\n",
+    "}\n",
+    "\n",
+    "impl<T, U> Point<T, U> {\n",
+    "    fn coords(&self) -> (&T, &U) {\n",
+    "        (&self.x, &self.y)\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "let mix = Point { x: 2, y: 3.0 };\n",
+    "println!(\"{mix:?}\");\n",
+    "println!(\"coords: {:?}\", mix.coords());"
+   ]
   }
  ],
  "metadata": {
