1. add Exercise: Generic min and generic.rs 2. update learn.ipynb

--- a/notebooks/learn.ipynb
+++ b/notebooks/learn.ipynb
@@ -718,62 +718,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {
     "vscode": {
      "languageId": "rust"
     }
    },
-   "outputs": [
-    {
-     "ename": "Error",
-     "evalue": "struct defined here, with 2 generic parameters: `T`, `U`",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31mError:\u001b[0m struct defined here, with 2 generic parameters: `T`, `U`"
-     ]
-    },
-    {
-     "ename": "Error",
-     "evalue": "struct defined here, with 2 generic parameters: `T`, `U`",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31mError:\u001b[0m struct defined here, with 2 generic parameters: `T`, `U`"
-     ]
-    },
-    {
-     "ename": "Error",
-     "evalue": "struct defined here, with 2 generic parameters: `T`, `U`",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31mError:\u001b[0m struct defined here, with 2 generic parameters: `T`, `U`"
-     ]
-    },
-    {
-     "ename": "Error",
-     "evalue": "struct defined here, with 2 generic parameters: `T`, `U`",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31mError:\u001b[0m struct defined here, with 2 generic parameters: `T`, `U`"
-     ]
-    },
-    {
-     "ename": "Error",
-     "evalue": "struct defined here, with 2 generic parameters: `T`, `U`",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31mError:\u001b[0m struct defined here, with 2 generic parameters: `T`, `U`"
-     ]
-    },
-    {
-     "ename": "Error",
-     "evalue": "struct defined here, with 2 generic parameters: `T`, `U`",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31mError:\u001b[0m struct defined here, with 2 generic parameters: `T`, `U`"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#[derive(Debug)]\n",
     "struct Point<T, U> {\n",
@@ -790,6 +741,97 @@
     "let mix = Point { x: 2, y: 3.0 };\n",
     "println!(\"{mix:?}\");\n",
     "println!(\"coords: {:?}\", mix.coords());"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Trait Bounds"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(\"foo\", \"foo\")\n",
+      "(NotClonable { name: \"Ethan\", age: 23 }, NotClonable { name: \"Ethan\", age: 23 })\n"
+     ]
+    }
+   ],
+   "source": [
+    "fn duplicate<T: Clone>(a: T) -> (T, T) {\n",
+    "    (a.clone(), a.clone())\n",
+    "}\n",
+    "\n",
+    "#[derive(Debug)]\n",
+    "#[derive(Clone)]\n",
+    "struct NotClonable {\n",
+    "    name: String,\n",
+    "    age: i32,\n",
+    "}\n",
+    "\n",
+    "let foo = String::from(\"foo\");\n",
+    "let foo_pair = duplicate(foo);\n",
+    "println!(\"{foo_pair:?}\");\n",
+    "\n",
+    "let me = NotClonable { name: String::from(\"Ethan\"), age: 23 };\n",
+    "let me_pair = duplicate(me);\n",
+    "println!(\"{bar_pair:?}\");"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## impl Trait"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "42000042\n",
+      "52000000\n"
+     ]
+    }
+   ],
+   "source": [
+    "// Syntactic sugar for:\n",
+    "//   fn add_42_millions<T: Into<i32>>(x: T) -> i32 {\n",
+    "fn add_42_millions(x: impl Into<i32>) -> i32 {\n",
+    "    x.into() + 42_000_000\n",
+    "}\n",
+    "\n",
+    "fn pair_of(x: u32) -> impl std::fmt::Debug {\n",
+    "    (x + 1, x - 1)\n",
+    "}\n",
+    "    \n",
+    "\n",
+    "let many = add_42_millions(42_i8);\n",
+    "println!(\"{many}\");\n",
+    "let many_more = add_42_millions(10_000_000);\n",
+    "println!(\"{many_more}\");\n",
+    "// let debuggable = pair_of(27);\n",
+    "// println!(\"debuggable: {debuggable:?}\");"
    ]
   }
  ],
