--- a/notebooks/learn.ipynb
+++ b/notebooks/learn.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {
     "vscode": {
      "languageId": "rust"
@@ -10,19 +10,19 @@
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "10"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "20\n"
+     ]
     }
    ],
    "source": [
-    "let a: u32 = 10;\n",
-    "a"
+    "let mut a: u32 = 10;\n",
+    "println!(\"{a}\");\n",
+    "a = 20;\n",
+    "println!(\"{a}\");"
    ]
   },
   {
@@ -832,6 +832,325 @@
     "println!(\"{many_more}\");\n",
     "// let debuggable = pair_of(27);\n",
     "// println!(\"debuggable: {debuggable:?}\");"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Standard Library Types"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Option"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "find returned Some(14)\n",
+      "find returned None\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "thread '<unnamed>' panicked at src/lib.rs:143:21:\n",
+      "Character not found\n",
+      "stack backtrace:\n",
+      "   0: rust_begin_unwind\n",
+      "             at /rustc/82e1608dfa6e0b5569232559e3d385fea5a93112/library/std/src/panicking.rs:645:5\n",
+      "   1: core::panicking::panic_fmt\n",
+      "             at /rustc/82e1608dfa6e0b5569232559e3d385fea5a93112/library/core/src/panicking.rs:72:14\n",
+      "   2: core::panicking::panic_display\n",
+      "             at /rustc/82e1608dfa6e0b5569232559e3d385fea5a93112/library/core/src/panicking.rs:178:5\n",
+      "   3: core::panicking::panic_str\n",
+      "             at /rustc/82e1608dfa6e0b5569232559e3d385fea5a93112/library/core/src/panicking.rs:152:5\n",
+      "   4: core::option::expect_failed\n",
+      "             at /rustc/82e1608dfa6e0b5569232559e3d385fea5a93112/library/core/src/option.rs:1985:5\n",
+      "   5: <unknown>\n",
+      "   6: <unknown>\n",
+      "   7: evcxr::runtime::Runtime::run_loop\n",
+      "   8: evcxr::runtime::runtime_hook\n",
+      "   9: evcxr_jupyter::main\n",
+      "note: Some details are omitted, run with `RUST_BACKTRACE=full` for a verbose backtrace.\n"
+     ]
+    }
+   ],
+   "source": [
+    "let name = \"Löwe 老虎 Léopard Gepardi\";\n",
+    "let mut position: Option<usize> = name.find('é');\n",
+    "println!(\"find returned {position:?}\");\n",
+    "assert_eq!(position.unwrap(), 14);\n",
+    "position = name.find('Z');\n",
+    "println!(\"find returned {position:?}\");\n",
+    "assert_eq!(position.expect(\"Character not found\"), 0);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dear diary: \n",
+      "When did I write something here?\n",
+      "I don't remember! \n",
+      "(50 bytes)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "()"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "use std::fs::File;\n",
+    "use std::io::Write;\n",
+    "use std::io::Read;\n",
+    "\n",
+    "let mut file = File::create(\"diary.txt\").unwrap();\n",
+    "file.write_all(b\"When did I write something here?\\nI don't remember!\").expect(\"failed to write message\");\n",
+    "\n",
+    "let file: Result<File, std::io::Error> = File::open(\"diary.txt\");\n",
+    "match file {\n",
+    "    Ok(mut file) => {\n",
+    "        let mut contents = String::new();\n",
+    "        if let Ok(bytes) = file.read_to_string(&mut contents) {\n",
+    "            println!(\"Dear diary: \\n{contents} \\n({bytes} bytes)\");\n",
+    "        } else {\n",
+    "            println!(\"Could not read file content\");\n",
+    "        }\n",
+    "    }\n",
+    "    Err(err) => {\n",
+    "        println!(\"The diary could not be opened: {err}\");\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## String"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "s1: Hello len = 5, capacity = 8\n",
+      "s2: Hello! len = 6, capacity = 6\n",
+      "s2: Hello!! len = 7, capacity = 12\n",
+      "s3: 🇨🇭 len = 8, capacity = 8, number of chars = 2\n",
+      "char 0: 🇨\n",
+      "char 1: 🇭\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "()"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "let mut s1 = String::new();\n",
+    "s1.push_str(\"Hello\");\n",
+    "println!(\"s1: {s1} len = {}, capacity = {}\", s1.len(), s1.capacity());\n",
+    "\n",
+    "let mut s2 = String::with_capacity(s1.len() + 1);\n",
+    "s2.push_str(&s1);\n",
+    "s2.push('!');\n",
+    "println!(\"s2: {s2} len = {}, capacity = {}\", s2.len(), s2.capacity());\n",
+    "s2.push('!');\n",
+    "println!(\"s2: {s2} len = {}, capacity = {}\", s2.len(), s2.capacity());\n",
+    "\n",
+    "let s3 = String::from(\"🇨🇭\");\n",
+    "println!(\"s3: {s3} len = {}, capacity = {}, number of chars = {}\", s3.len(), s3.capacity(), s3.chars().count());\n",
+    "for (i, c) in s3.chars().enumerate() {\n",
+    "    println!(\"char {i}: {c}\");\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Vec"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "v1: [42], len = 1, capacity = 4\n",
+      "v2: [42, 9999], len = 2, capacity = 2\n",
+      "v2: [42, 9999, 1026], len = 3, capacity = 4\n",
+      "v3: [0, 0, 2, 4]\n",
+      "v3: [0, 2, 4]\n",
+      "v3: [0, 2, 4, 0]\n",
+      "v3: [0, 2, 4, 0]\n",
+      "v4: ['H', 'e', 'l', 'l', 'o', ' ', '🦀']\n"
+     ]
+    }
+   ],
+   "source": [
+    "let mut v1 = Vec::new();\n",
+    "v1.push(42);\n",
+    "println!(\"v1: {:?}, len = {}, capacity = {}\", v1, v1.len(), v1.capacity());\n",
+    "\n",
+    "let mut v2 = Vec::with_capacity(v1.len() + 1);\n",
+    "v2.extend(v1.iter());\n",
+    "v2.push(9999);\n",
+    "println!(\"v2: {:?}, len = {}, capacity = {}\", v2, v2.len(), v2.capacity());\n",
+    "v2.push(1026);\n",
+    "println!(\"v2: {:?}, len = {}, capacity = {}\", v2, v2.len(), v2.capacity());\n",
+    "\n",
+    "// Canonical macro to initialize a vector with elements.\n",
+    "let mut v3 = vec![0, 0, 1, 2, 3, 4];\n",
+    "\n",
+    "// Retain only the even elements.\n",
+    "v3.retain(|x| x % 2 == 0);\n",
+    "println!(\"v3: {v3:?}\");\n",
+    "\n",
+    "// Remove consecutive duplicates.\n",
+    "v3.dedup();\n",
+    "println!(\"v3: {v3:?}\");\n",
+    "v3.push(0);\n",
+    "println!(\"v3: {v3:?}\");\n",
+    "v3.dedup();\n",
+    "println!(\"v3: {v3:?}\");\n",
+    "\n",
+    "// Use vector to store UTF-8 encoded strings.\n",
+    "let mut v4 = Vec::new();\n",
+    "v4.extend(String::from(\"Hello 🦀\").chars());\n",
+    "println!(\"v4: {v4:?}\");"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## HashMap"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "We know about 3 books, but not Les Misérables.\n",
+      "Pride and Prejudice: 303 pages\n",
+      "Alice's Adventure in Wonderland is unknown.\n",
+      "Harry Potter has 336 pages\n",
+      "page_counts:\n",
+      "{\n",
+      "    \"Alice's Adventure in Wonderland\": 1,\n",
+      "    \"Grimms' Fairy Tales\": 751,\n",
+      "    \"Pride and Prejudice\": 304,\n",
+      "    \"Adventures of Huckleberry Finn\": 207,\n",
+      "}\n"
+     ]
+    }
+   ],
+   "source": [
+    "use std::collections::HashMap;\n",
+    "\n",
+    "let mut page_counts = HashMap::new();\n",
+    "page_counts.insert(\"Adventures of Huckleberry Finn\".to_string(), 207);\n",
+    "page_counts.insert(\"Grimms' Fairy Tales\".to_string(), 751);\n",
+    "page_counts.insert(\"Pride and Prejudice\".to_string(), 303);\n",
+    "\n",
+    "if !page_counts.contains_key(\"Les Misérables\") {\n",
+    "    println!(\n",
+    "        \"We know about {} books, but not Les Misérables.\",\n",
+    "        page_counts.len()\n",
+    "    );\n",
+    "}\n",
+    "\n",
+    "for book in [\"Pride and Prejudice\", \"Alice's Adventure in Wonderland\"] {\n",
+    "    match page_counts.get(book) {\n",
+    "        Some(count) => println!(\"{book}: {count} pages\"),\n",
+    "        None => println!(\"{book} is unknown.\"),\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "// Use the .entry() method to insert a value if nothing is found.\n",
+    "for book in [\"Pride and Prejudice\", \"Alice's Adventure in Wonderland\"] {\n",
+    "    let page_count: &mut i32 = page_counts.entry(book.to_string()).or_insert(0);\n",
+    "    *page_count += 1;\n",
+    "}\n",
+    "\n",
+    "{\n",
+    "    let pc1 = page_counts.get(\"Harry Potter and the Sorcerer's Stone\").unwrap_or(&336);\n",
+    "    println!(\"Harry Potter has {} pages\", pc1);\n",
+    "}\n",
+    "println!(\"page_counts:\\n{page_counts:#?}\");"
    ]
   }
  ],
