--- a/notebooks/learn.ipynb
+++ b/notebooks/learn.ipynb
@@ -1152,6 +1152,500 @@
     "}\n",
     "println!(\"page_counts:\\n{page_counts:#?}\");"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Standard Library Traits"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Comparisons"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### PartialEq and Eq"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Equal? true\n"
+     ]
+    }
+   ],
+   "source": [
+    "struct Key {\n",
+    "    id: u32,\n",
+    "    metadata: Option<String>,\n",
+    "}\n",
+    "\n",
+    "impl PartialEq for Key {\n",
+    "    fn eq(&self, other: &Self) -> bool {\n",
+    "        self.id == other.id\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "let key1 = Key { id: 5, metadata: None };\n",
+    "let key2 = Key { metadata: Some(\"color=red\".to_string()), ..key1 };\n",
+    "\n",
+    "println!(\"Equal? {}\", key1 == key2);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### PartialOrd and Ord"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cite1 < cite2? true\n"
+     ]
+    }
+   ],
+   "source": [
+    "use std::cmp::Ordering;\n",
+    "#[derive(Eq, PartialEq)]\n",
+    "struct Citation {\n",
+    "    author: String,\n",
+    "    year: u32,\n",
+    "}\n",
+    "\n",
+    "impl PartialOrd for Citation {\n",
+    "    fn partial_cmp(&self, other: &Self) -> Option<Ordering> {\n",
+    "        match self.author.partial_cmp(&other.author) {\n",
+    "            Some(Ordering::Equal) => self.year.partial_cmp(&other.year),\n",
+    "            author_ord => author_ord,\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "// impl Ord for Citation {\n",
+    "//     fn cmp(&self, other: &Self) -> Ordering {\n",
+    "//         self.partial_cmp(other).unwrap()\n",
+    "//     }\n",
+    "// }\n",
+    "\n",
+    "let cite1 = Citation { author: \"Einstein\".to_string(), year: 1905 };\n",
+    "let cite2 = Citation { author: \"Ethan Wang\".to_string(), year: 2023 };\n",
+    "\n",
+    "println!(\"cite1 < cite2? {}\", cite1 < cite2);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Operators"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Point { x: 10, y: 20 } + Point { x: 100, y: 200 } = Point { x: 110, y: 220 }\n",
+      "Point { x: 10, y: 20 } + (1, 2) = (11, 22)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#[derive(Debug, Copy, Clone)]\n",
+    "struct Point {\n",
+    "    x: i32,\n",
+    "    y: i32,\n",
+    "}\n",
+    "\n",
+    "impl std::ops::Add for Point {\n",
+    "    type Output = Self;\n",
+    "\n",
+    "    fn add(self, other: Self) -> Self {\n",
+    "        Self { x: self.x + other.x, y: self.y + other.y }\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "let p1 = Point { x: 10, y: 20 };\n",
+    "let p2 = Point { x: 100, y: 200 };\n",
+    "println!(\"{:?} + {:?} = {:?}\", p1, p2, p1 + p2);\n",
+    "\n",
+    "impl std::ops::Add<(i32, i32)> for Point {\n",
+    "    type Output = (i32, i32);\n",
+    "\n",
+    "    fn add(self, other: (i32, i32)) -> Self::Output {\n",
+    "        (self.x + other.0, self.y + other.1)\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "let p3 = (1, 2);\n",
+    "let p4 = p1 + p3;\n",
+    "println!(\"{:?} + {:?} = {:?}\", p1, p3, p4);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## From and Into"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello, 127.0.0.1, 1, 123\n"
+     ]
+    }
+   ],
+   "source": [
+    "// From\n",
+    "let s = String::from(\"hello\");\n",
+    "let addr = std::net::Ipv4Addr::from([127, 0, 0, 1]);\n",
+    "let one = i16::from(true);\n",
+    "let bigger = i32::from(123_i16);\n",
+    "println!(\"{s}, {addr}, {one}, {bigger}\");"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello, 127.0.0.1, 1, 123\n"
+     ]
+    }
+   ],
+   "source": [
+    "// Into\n",
+    "let s: String = \"hello\".into();\n",
+    "let addr: std::net::Ipv4Addr = [127, 0, 0, 1].into();\n",
+    "let one: i16 = true.into();\n",
+    "let bigger: i32 = 123_i16.into();\n",
+    "println!(\"{s}, {addr}, {one}, {bigger}\");"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Casting"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "as u16: 1000\n",
+      "as i16: 1000\n",
+      "as u8: 232\n"
+     ]
+    }
+   ],
+   "source": [
+    "let value: i64 = 1000;\n",
+    "println!(\"as u16: {}\", value as u16);\n",
+    "println!(\"as i16: {}\", value as i16);\n",
+    "println!(\"as u8: {}\", value as u8);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Read and Write"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "lines in slice: 3\n",
+      "lines in file: 70131\n"
+     ]
+    }
+   ],
+   "source": [
+    "// Read\n",
+    "use std::io::{BufRead, BufReader, Read, Result};\n",
+    "\n",
+    "fn count_lines<R: Read>(reader: R) -> usize {\n",
+    "    let buf_reader = BufReader::new(reader);\n",
+    "    buf_reader.lines().count()\n",
+    "}\n",
+    "\n",
+    "let slice: &[u8] = b\"foo\\nbar\\nbaz\\n\";\n",
+    "println!(\"lines in slice: {}\", count_lines(slice));\n",
+    "\n",
+    "let file = std::fs::File::open(std::env::current_exe()?)?;\n",
+    "println!(\"lines in file: {}\", count_lines(file));"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Logged: [72, 101, 108, 108, 111, 10, 87, 111, 114, 108, 100, 10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "// Write\n",
+    "use std::io::{Result, Write};\n",
+    "\n",
+    "fn log<W: Write>(writer: &mut W, msg: &str) -> Result<()> {\n",
+    "    writer.write_all(msg.as_bytes())?;\n",
+    "    writer.write_all(\"\\n\".as_bytes())\n",
+    "}\n",
+    "\n",
+    "let mut buffer = Vec::new();\n",
+    "log(&mut buffer, \"Hello\")?;\n",
+    "log(&mut buffer, \"World\")?;\n",
+    "println!(\"Logged: {:?}\", buffer);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## The Default Trait"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Default struct:\n",
+      "Derived {\n",
+      "    x: 0,\n",
+      "    y: \"\",\n",
+      "    z: Implemented(\n",
+      "        \"John Smith\",\n",
+      "    ),\n",
+      "}\n",
+      "\n",
+      "Default struct (with y set):\n",
+      "Derived {\n",
+      "    x: 0,\n",
+      "    y: \"Y is set!\",\n",
+      "    z: Implemented(\n",
+      "        \"John Smith\",\n",
+      "    ),\n",
+      "}\n",
+      "\n",
+      "Fill Nothing with Default:\n",
+      "Derived {\n",
+      "    x: 0,\n",
+      "    y: \"\",\n",
+      "    z: Implemented(\n",
+      "        \"John Smith\",\n",
+      "    ),\n",
+      "}\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "#[derive(Debug, Default)]\n",
+    "struct Derived {\n",
+    "    x: u32,\n",
+    "    y: String,\n",
+    "    z: Implemented,\n",
+    "}\n",
+    "\n",
+    "#[derive(Debug)]\n",
+    "struct Implemented(String);\n",
+    "\n",
+    "impl Default for Implemented {\n",
+    "    fn default() -> Self {\n",
+    "        Self(\"John Smith\".into())\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "let default_struct = Derived::default();\n",
+    "println!(\"Default struct:\\n{:#?}\\n\", default_struct);\n",
+    "\n",
+    "let almost_default_struct =\n",
+    "    Derived { y: \"Y is set!\".into(), ..Derived::default() };\n",
+    "println!(\"Default struct (with y set):\\n{almost_default_struct:#?}\\n\");\n",
+    "\n",
+    "let nothing: Option<Derived> = None;\n",
+    "println!(\"Fill Nothing with Default:\\n{:#?}\\n\", nothing.unwrap_or_default());"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Closures"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Calling function on 10\n",
+      "add_3: 13\n",
+      "Calling function on 20\n",
+      "add_3: 23\n",
+      "Calling function on 4\n",
+      "accumulate: 4\n",
+      "Calling function on 5\n",
+      "accumulate: 9\n",
+      "Calling function on 3\n",
+      "multiply_sum: 27\n"
+     ]
+    }
+   ],
+   "source": [
+    "fn apply_with_log(func: impl FnOnce(i32) -> i32, input: i32) -> i32 {\n",
+    "    println!(\"Calling function on {input}\");\n",
+    "    func(input)\n",
+    "}\n",
+    "\n",
+    "{\n",
+    "    let add_3 = |x| x + 3;\n",
+    "    println!(\"add_3: {}\", apply_with_log(add_3, 10));\n",
+    "    println!(\"add_3: {}\", apply_with_log(add_3, 20));\n",
+    "    \n",
+    "    let mut v = Vec::new();\n",
+    "    let mut accumulate = |x: i32| {\n",
+    "        v.push(x);\n",
+    "        v.iter().sum::<i32>()\n",
+    "    };\n",
+    "    println!(\"accumulate: {}\", apply_with_log(&mut accumulate, 4));\n",
+    "    println!(\"accumulate: {}\", apply_with_log(&mut accumulate, 5));\n",
+    "    \n",
+    "    let multiply_sum = |x| x * v.into_iter().sum::<i32>();\n",
+    "    println!(\"multiply_sum: {}\", apply_with_log(multiply_sum, 3));\n",
+    "};"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hi there\n"
+     ]
+    }
+   ],
+   "source": [
+    "fn make_greeter(prefix: String) -> impl Fn(&str) {\n",
+    "    return move |name| println!(\"{} {}\", prefix, name);\n",
+    "}\n",
+    "\n",
+    "{\n",
+    "    let hi = make_greeter(\"Hi\".to_string());\n",
+    "    hi(\"there\");\n",
+    "};"
+   ]
   }
  ],
  "metadata": {
