1. update learn.ipynb 2. add Exercise: ROT13 3. add Exercise: Builder Type

--- a/notebooks/learn.ipynb
+++ b/notebooks/learn.ipynb
@@ -660,7 +660,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Generic Functions"
+    "## Generic Data Types"
    ]
   },
   {
@@ -1645,6 +1645,280 @@
     "    let hi = make_greeter(\"Hi\".to_string());\n",
     "    hi(\"there\");\n",
     "};"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Memory Management"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Ownership"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "Error",
+     "evalue": "cannot find value `p` in this scope",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m[E0425] Error:\u001b[0m cannot find value `p` in this scope",
+      "   \u001b[38;5;246m╭\u001b[0m\u001b[38;5;246m─\u001b[0m\u001b[38;5;246m[\u001b[0mcommand_2:1:1\u001b[38;5;246m]\u001b[0m",
+      "   \u001b[38;5;246m│\u001b[0m",
+      " \u001b[38;5;246m7 │\u001b[0m \u001b[38;5;249mp\u001b[0m\u001b[38;5;249mr\u001b[0m\u001b[38;5;249mi\u001b[0m\u001b[38;5;249mn\u001b[0m\u001b[38;5;249mt\u001b[0m\u001b[38;5;249ml\u001b[0m\u001b[38;5;249mn\u001b[0m\u001b[38;5;249m!\u001b[0m\u001b[38;5;249m(\u001b[0m\u001b[38;5;249m\"\u001b[0m\u001b[38;5;249my\u001b[0m\u001b[38;5;249m:\u001b[0m\u001b[38;5;249m \u001b[0m\u001b[38;5;249m{\u001b[0m\u001b[38;5;249m}\u001b[0m\u001b[38;5;249m\"\u001b[0m\u001b[38;5;249m,\u001b[0m\u001b[38;5;249m \u001b[0m\u001b[38;5;54mp\u001b[0m\u001b[38;5;249m.\u001b[0m\u001b[38;5;249m1\u001b[0m\u001b[38;5;249m)\u001b[0m\u001b[38;5;249m;\u001b[0m",
+      " \u001b[38;5;240m  │\u001b[0m                   \u001b[38;5;54m┬\u001b[0m  ",
+      " \u001b[38;5;240m  │\u001b[0m                   \u001b[38;5;54m╰\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m not found in this scope",
+      "\u001b[38;5;246m───╯\u001b[0m"
+     ]
+    }
+   ],
+   "source": [
+    "struct Point(i32, i32);\n",
+    "\n",
+    "{\n",
+    "    let p = Point(3, 4);\n",
+    "    println!(\"x: {}\", p.0);\n",
+    "}\n",
+    "println!(\"y: {}\", p.1);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Move Semantics "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "s2: Hello!\n"
+     ]
+    }
+   ],
+   "source": [
+    "let s1: String = String::from(\"Hello!\");\n",
+    "let s2: String = s1;\n",
+    "println!(\"s2: {s2}\");\n",
+    "// println!(\"s1: {s1}\");"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello Alice\n",
+      "Hello Alice\n",
+      "Hello Alice\n",
+      "Hello Alice\n"
+     ]
+    }
+   ],
+   "source": [
+    "fn say_hello(name: String) {\n",
+    "    println!(\"Hello {name}\")\n",
+    "}\n",
+    "\n",
+    "fn say_hello_ref(name: &String) {\n",
+    "    println!(\"Hello {name}\")\n",
+    "}\n",
+    "\n",
+    "let name = String::from(\"Alice\");\n",
+    "say_hello_ref(&name);\n",
+    "say_hello_ref(&name);\n",
+    "\n",
+    "say_hello(name.clone());\n",
+    "say_hello(name);\n",
+    "// say_hello(name);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Clone"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "#[derive(Default)]\n",
+    "struct Backends {\n",
+    "    hostnames: Vec<String>,\n",
+    "    weights: Vec<f64>,\n",
+    "}\n",
+    "\n",
+    "impl Backends {\n",
+    "    fn set_hostnames(&mut self, hostnames: &Vec<String>) {\n",
+    "        self.hostnames = hostnames.clone();\n",
+    "        self.weights = hostnames.iter().map(|_| 1.0).collect();\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Copy Types"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x: 42\n",
+      "y: 42\n"
+     ]
+    }
+   ],
+   "source": [
+    "let x = 42;\n",
+    "let y = x;\n",
+    "println!(\"x: {x}\"); // would not be accessible if not Copy\n",
+    "println!(\"y: {y}\");"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "p1: Point(3, 4)\n",
+      "p2: Point(3, 4)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#[derive(Copy, Clone, Debug)]\n",
+    "struct Point(i32, i32);\n",
+    "\n",
+    "let p1 = Point(3, 4);\n",
+    "let p2 = p1;\n",
+    "println!(\"p1: {p1:?}\");\n",
+    "println!(\"p2: {p2:?}\");"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Drop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Exiting block B\n",
+      "Dropping d\n",
+      "Dropping c\n",
+      "Exiting block A\n",
+      "Dropping b\n",
+      "Exiting main\n",
+      "Dropping a\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "()"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "struct Droppable {\n",
+    "    name: &'static str,\n",
+    "}\n",
+    "\n",
+    "impl Drop for Droppable {\n",
+    "    fn drop(&mut self) {\n",
+    "        println!(\"Dropping {}\", self.name);\n",
+    "    }\n",
+    "}\n",
+    "{\n",
+    "    let a = Droppable { name: \"a\" };\n",
+    "    {\n",
+    "        let b = Droppable { name: \"b\" };\n",
+    "        {\n",
+    "            let c = Droppable { name: \"c\" };\n",
+    "            let d = Droppable { name: \"d\" };\n",
+    "            println!(\"Exiting block B\");\n",
+    "        }\n",
+    "        println!(\"Exiting block A\");\n",
+    "    }\n",
+    "    drop(a);\n",
+    "    println!(\"Exiting main\");\n",
+    "}"
    ]
   }
  ],
