1. update learn.ipynb 2. add Exercise: Binary Tree

--- a/notebooks/learn.ipynb
+++ b/notebooks/learn.ipynb
@@ -1859,7 +1859,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Drop"
+    "## Drop"
    ]
   },
   {
@@ -1919,6 +1919,115 @@
     "    drop(a);\n",
     "    println!(\"Exiting main\");\n",
     "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Smart Pointers"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Box"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "five: 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "let five = Box::new(5);\n",
+    "println!(\"five: {}\", *five);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Element(1, Element(2, Nil))\n"
+     ]
+    }
+   ],
+   "source": [
+    "#[derive(Debug)]\n",
+    "enum List<T> {\n",
+    "    /// A non-empty list: first element and the rest of the list.\n",
+    "    Element(T, Box<List<T>>),\n",
+    "    /// An empty list.\n",
+    "    Nil,\n",
+    "}\n",
+    "\n",
+    "let list: List<i32> =\n",
+    "    List::Element(1, Box::new(List::Element(2, Box::new(List::Nil))));\n",
+    "println!(\"{list:?}\");"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## RC"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a: 10\n",
+      "a strong: 1\n",
+      "b: 10\n",
+      "a strong: 2\n",
+      "b strong: 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "use std::rc::Rc;\n",
+    "\n",
+    "let a = Rc::new(10);\n",
+    "println!(\"a: {a}\");\n",
+    "println!(\"a strong: {}\", Rc::strong_count(&a));\n",
+    "\n",
+    "let b = Rc::clone(&a);\n",
+    "\n",
+    "println!(\"b: {b}\");\n",
+    "println!(\"a strong: {}\", Rc::strong_count(&a));\n",
+    "println!(\"b strong: {}\", Rc::strong_count(&b));"
    ]
   }
  ],
